k8s/python-app-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: python-app-svc
spec:
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
